# atlant-scanner

./: .gitignore  APIException.hpp  AtlantScanner.cpp  AuthToken.cpp  AuthToken.hpp  AuthTokenFetcher.cpp  AuthTokenFetcher.hpp  Authenticator.cpp  Authenticator.hpp  CMakeLists.txt  ContentMetadata.cpp  ContentMetadata.hpp  Detection.cpp  Detection.hpp  FileScanner.cpp  FileScanner.hpp  HTTPCommunication.hpp  HTTPCommunicationImpl.cpp  HTTPCommunicationImpl.hpp  LICENSE  MultipartRequestBuilder.cpp  MultipartRequestBuilder.hpp  README.md  ScanMetadata.cpp  ScanMetadata.hpp  ScanPoller.cpp  ScanPoller.hpp  ScanResult.cpp  ScanResult.hpp  ScanSettings.cpp  ScanSettings.hpp  TokenFetcher.cpp  TokenFetcher.hpp  atlant-api-scanner.sln  atlant-api-scanner.vcxproj  atlant-api-scanner.vcxproj.filters
Sample-Test1/: AuthTokenFetcherTests.cpp  AuthTokenTests.cpp  AuthenticatorTests.cpp  CMakeLists.txt  ContentMetadataTests.cpp  DetectionTests.cpp  FileScannerTests.cpp  MockHTTPCommunication.hpp  MockHTTPCommunicationcpp.cpp  MultiPartRequestBuilderTests.cpp  ResultPrinterTest.cpp  Sample-Test1.vcxproj  ScanMetadataTests.cpp  ScanPollerTests.cpp  ScanResultTests.cpp  ScanSettingsTests.cpp
atlant-api-scanner-tests/: atlant-api-scanner-tests.vcxproj
include/: APIException.hpp  AuthToken.hpp  AuthTokenFetcher.hpp  Authenticator.hpp  Detection.hpp  FileScanner.hpp  HTTPCommunication.hpp  HTTPCommunicationImpl.hpp  JSONHandler.hpp  JSONHandlerImpl.hpp  MultipartRequestBuilder.hpp  ResultPrinter.hpp  ScanMetadata.hpp  ScanPoller.hpp  ScanResult.hpp  ScanSettings.hpp
src/: AtlantScanner.cpp  AuthTokenFetcher.cpp  Authenticator.cpp  ContentMetadata.cpp  Detection.cpp  FileScanner.cpp  HTTPCommunicationImpl.cpp  JSONHandlerImpl.cpp  MultipartRequestBuilder.cpp  ResultPrinter.cpp  ScanMetadata.cpp  ScanPoller.cpp  ScanResult.cpp  ScanSettings.cpp
